save options to config file